[gd_scene load_steps=14 format=3 uid="uid://b3hl7rijx5lim"]

[ext_resource type="Script" path="res://Scripts/pause__menu.gd" id="1_716a7"]
[ext_resource type="PackedScene" uid="uid://buthq1411514a" path="res://Scenes/UI/blue_nine_patch.tscn" id="2_3q0pl"]
[ext_resource type="Texture2D" uid="uid://dsem3sfl3umaa" path="res://Art/UI [New]/General Button Wave X/WaveXNormal.png" id="3_ftuoo"]
[ext_resource type="Texture2D" uid="uid://wg5w1nmgbk72" path="res://Art/UI [New]/General Button Wave X/WaveXPressedBlue.png" id="4_hwgtp"]
[ext_resource type="LabelSettings" uid="uid://c7uq15oceubm2" path="res://Fonts/button_font.tres" id="5_1dnsa"]
[ext_resource type="Texture2D" uid="uid://20i4gdqiw18i" path="res://Art/UI [New]/General Button Wave X/WaveXHoverBlue.png" id="5_qcf8f"]
[ext_resource type="Texture2D" uid="uid://cyolhflkffudd" path="res://Art/UI [New]/General Button Wave X/WaveXDisabled.png" id="6_fjrpl"]
[ext_resource type="Texture2D" uid="uid://cqmbafgsltvjj" path="res://Art/UI [New]/General Button Wave X/WaveXPressedRed.png" id="8_uhthe"]
[ext_resource type="Texture2D" uid="uid://crrk68rmo5sbj" path="res://Art/UI [New]/General Button Wave X/WaveXHoverRed.png" id="9_svok3"]
[ext_resource type="LabelSettings" uid="uid://d33ujo48pv6fy" path="res://Fonts/heading_font_medium.tres" id="10_is47e"]
[ext_resource type="AudioStream" uid="uid://dobiea8tnj7sm" path="res://Audio/Sound Effects/button_test_4.wav" id="11_uv8fq"]

[sub_resource type="Gradient" id="Gradient_5t135"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wjjnt"]
gradient = SubResource("Gradient_5t135")

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_716a7")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture1D_wjjnt")

[node name="BlueNinePatch" parent="." instance=ExtResource("2_3q0pl")]
offset_left = 64.0
offset_top = 40.0
offset_right = 1872.0
offset_bottom = 1043.0

[node name="MainMenuButton" type="TextureButton" parent="."]
offset_left = 836.0
offset_top = 698.0
offset_right = 1116.0
offset_bottom = 765.0
texture_normal = ExtResource("3_ftuoo")
texture_pressed = ExtResource("4_hwgtp")
texture_hover = ExtResource("5_qcf8f")
texture_disabled = ExtResource("6_fjrpl")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MainMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -6.5
offset_right = 58.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "MAIN MENU"
label_settings = ExtResource("5_1dnsa")

[node name="ResumeButton" type="TextureButton" parent="."]
offset_left = 836.0
offset_top = 398.0
offset_right = 1116.0
offset_bottom = 465.0
texture_normal = ExtResource("3_ftuoo")
texture_pressed = ExtResource("4_hwgtp")
texture_hover = ExtResource("5_qcf8f")
texture_disabled = ExtResource("6_fjrpl")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="ResumeButton"]
modulate = Color(0.262745, 0.74902, 0.960784, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -6.50006
offset_right = 44.0
offset_bottom = 16.4999
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "RESUME"
label_settings = ExtResource("5_1dnsa")

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 836.0
offset_top = 794.0
offset_right = 1116.0
offset_bottom = 861.0
texture_normal = ExtResource("3_ftuoo")
texture_pressed = ExtResource("8_uhthe")
texture_hover = ExtResource("9_svok3")
texture_disabled = ExtResource("6_fjrpl")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="QuitButton"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -6.5
offset_right = 62.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "QUIT GAME"
label_settings = ExtResource("5_1dnsa")

[node name="SaveButton" type="TextureButton" parent="."]
offset_left = 836.0
offset_top = 491.0
offset_right = 1116.0
offset_bottom = 558.0
texture_normal = ExtResource("3_ftuoo")
texture_pressed = ExtResource("4_hwgtp")
texture_hover = ExtResource("5_qcf8f")
texture_disabled = ExtResource("6_fjrpl")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="SaveButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -5.50006
offset_right = 63.0
offset_bottom = 17.4999
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SAVE GAME"
label_settings = ExtResource("5_1dnsa")

[node name="Label" type="Label" parent="."]
offset_left = 810.0
offset_top = 92.0
offset_right = 1138.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 52
text = "Game Paused"
label_settings = ExtResource("10_is47e")

[node name="SEAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_uv8fq")
volume_db = -20.0

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
